# AutoBuy

./: README.md  app.py  pyproject.toml  seckill2.py  seckill_original.py
AutoBuy-main/: app.py  requirements.txt  seckill.py  start.bat
AutoBuy-main/static/css/: style.css
AutoBuy-main/static/js/: jd.js  seckill.js  tb.js
AutoBuy-main/templates/: index.html  tb.html
templates/: help.html  index - 副本.html.bak  jd.html
