[project]
name = "autobuy"
version = "0.1.0"
description = "自动抢购工具 - 支持京东和淘宝"
requires-python = ">=3.8"
dependencies = [
    "selenium>=4.0.0",
    "requests>=2.28.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pyinstaller>=5.0.0",
]
